Ticket #28947: Added button to copy a row in a composition table.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -45,6 +45,7 @@ class.com.top_logic.element.layout.meta.search.quick.I18NConstants.NO_RESULTS = 
 class.com.top_logic.element.layout.meta.search.quick.I18NConstants.SEARCH_STRING_TOO_SHORT__MIN = Die Sucheingabe erfordert mindestens {0} Zeichen.
 class.com.top_logic.element.layout.structured.I18NConstants.ERROR_NOT_A_STRUCTURED_ELEMENT__ELEMENT = Das Objekt {0} ist kein strukturiertes Element.
 class.com.top_logic.element.layout.tree.I18NConstants.DROP_OPERATION = Fallenlassen im Baum.
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.COPY_COMPOSITION_ROW_LABEL = Zeile kopieren
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_HEADER = Neues Element anlegen
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_MESSAGE = Wählen Sie den Typ des anzulegenden Objektes aus
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_TITLE = Neues Element
@@ -1197,6 +1198,8 @@ com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.ConfigE
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.ConfigEditContext.edit-context.tooltip = Der Kontext des zu bearbeitenden Wertes.
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.ConfigEditContext.value = Wert
 com.top_logic.element.meta.form.fieldprovider.ConfigurationFieldProvider.ConfigEditContext.value.tooltip = Das eigentliche <i>Konfigurationselement</i>, das bearbeitet wird.
+com.top_logic.element.meta.form.fieldprovider.Icons.COPY_ROW = Bild für den Befehl zum Kopieren einer Zeile.
+com.top_logic.element.meta.form.fieldprovider.Icons.COPY_ROW_DISABLED = Deaktiviertes Bild für den Befehl zum Kopieren einer Zeile.
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider = Erzeugung von String-Feldern
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim = Trimmen
 com.top_logic.element.meta.form.fieldprovider.StringFieldProvider.Config.trim.tooltip = Ob Strings getrimmt werden sollen (automatische Entfernung von Leerzeichen vor und am Ende von Werten).
