--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7535,13 +7535,15 @@ com.top_logic.model.annotate.ui.TLDynamicIcon.tooltip = Dynamisches Berechnen de
 com.top_logic.model.annotate.ui.TLIDColumn = ID-Spalte
 com.top_logic.model.annotate.ui.TLIDColumn.tooltip = Legt die id-Spalte von Tabellen fest, die Objekte des kommentierten Typs darstellen. <p> Die id-Spalte ist die Spalte, für die ein Symbol des Typs des Zeilenobjekts vor ihrem Wert hinzugefügt wird und die als Link zu ihrem Zeilenobjekt dargestellt wird. </p> <p> Wenn keine id-Spalte kommentiert wird, wird standardmäßig die Spalte <code>name</code> verwendet, sofern sie vorhanden ist. </p>
 com.top_logic.model.annotate.ui.TLRowObject = Zeilenobjekt
+com.top_logic.model.annotate.ui.TLRowObject.copyable = Kopierbar
+com.top_logic.model.annotate.ui.TLRowObject.copyable.tooltip = Ob eine Schaltfläche zum Kopieren eines ausgewählten Zeilenobjekts zur Tabelle hinzugefügt wird.
 com.top_logic.model.annotate.ui.TLRowObject.creatable = Erstellbar
-com.top_logic.model.annotate.ui.TLRowObject.creatable.tooltip = Wahr, wenn der Tabelle eine Schaltfläche zum Hinzufügen neuer Zeilenobjekte hinzugefügt wird.
+com.top_logic.model.annotate.ui.TLRowObject.creatable.tooltip = Ob der Tabelle eine Schaltfläche zum Hinzufügen neuer Zeilenobjekte hinzugefügt wird.
 com.top_logic.model.annotate.ui.TLRowObject.deletable = Löschbar
-com.top_logic.model.annotate.ui.TLRowObject.deletable.tooltip = Wahr, wenn der Tabelle eine Schaltfläche zum Löschen vorhandener Zeilenobjekte hinzugefügt wird.
+com.top_logic.model.annotate.ui.TLRowObject.deletable.tooltip = Ob der Tabelle eine Schaltfläche zum Löschen vorhandener Zeilenobjekte hinzugefügt wird.
 com.top_logic.model.annotate.ui.TLRowObject.sortable = Sortierbar
-com.top_logic.model.annotate.ui.TLRowObject.sortable.tooltip = Wahr, wenn der Tabelle eine Schaltfläche zum Anpassen der Reihenfolge der Zeilen hinzugefügt wird.
-com.top_logic.model.annotate.ui.TLRowObject.tooltip = <i>Attribut-Anmerkung</i>, die festlegt, ob der Tabelle, die einen Verweis darstellt, eine Schaltfläche zum Hinzufügen neuer Objekte, eine Schaltfläche zum Löschen von Objekten oder eine Schaltfläche zum Anpassen der Reihenfolge der Zeilen hinzugefügt wird.
+com.top_logic.model.annotate.ui.TLRowObject.sortable.tooltip = Ob der Tabelle eine Schaltfläche zum Anpassen der Reihenfolge der Zeilen hinzugefügt wird.
+com.top_logic.model.annotate.ui.TLRowObject.tooltip = <i>Attribut Annotation</i>, die festlegt, ob eine Hinzufügen-Schaltfläche zum Erstellen neuer Objekte, eine Entfernen-Schaltfläche zum Löschen von Objekten, eine Kopieren-Schaltfläche zum Kopieren ausgewählter Objekte oder eine Schaltfläche zum Anpassen der Reihenfolge der Zeilen zur Tabelle hinzugefügt wird, die eine Referenz darstellt.
 com.top_logic.model.annotate.ui.TLSortColumns = Sortierspalten
 com.top_logic.model.annotate.ui.TLSortColumns.tooltip = Legt die Sortierreihenfolge von Tabellen fest, die Objekte des kommentierten Typs darstellen.
 com.top_logic.model.annotate.util.AttributeSettings = Einstellungen der Attribute
