--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7535,13 +7535,15 @@ com.top_logic.model.annotate.ui.TLDynamicIcon.tooltip = Dynamically computing th
 com.top_logic.model.annotate.ui.TLIDColumn = TLID column
 com.top_logic.model.annotate.ui.TLIDColumn.tooltip = Sets the id column of tables representing objects of the annotated type. <p> The id column is the column for which an icon of the row objects type is added before its value and which is rendered as a link to its row object. </p> <p> If no id column is annotated then the <code>name</code> column is used by default, if it exists. </p>
 com.top_logic.model.annotate.ui.TLRowObject = Row object
+com.top_logic.model.annotate.ui.TLRowObject.copyable = Copyable
+com.top_logic.model.annotate.ui.TLRowObject.copyable.tooltip = Whether a button to copy an selected row object is added to the table.
 com.top_logic.model.annotate.ui.TLRowObject.creatable = Creatable
-com.top_logic.model.annotate.ui.TLRowObject.creatable.tooltip = True if an add button to create new row objects is added to the table.
+com.top_logic.model.annotate.ui.TLRowObject.creatable.tooltip = Whether an add button to create new row objects is added to the table.
 com.top_logic.model.annotate.ui.TLRowObject.deletable = Deletable
-com.top_logic.model.annotate.ui.TLRowObject.deletable.tooltip = True if a remove button to delete existing row objects is added to the table.
+com.top_logic.model.annotate.ui.TLRowObject.deletable.tooltip = Whether a remove button to delete existing row objects is added to the table.
 com.top_logic.model.annotate.ui.TLRowObject.sortable = Sortable
-com.top_logic.model.annotate.ui.TLRowObject.sortable.tooltip = True if a button to adjust the order of the rows is added to the table.
-com.top_logic.model.annotate.ui.TLRowObject.tooltip = <i>Attribute annotation</i> that determines whether an add button to create new objects, a remove button to delete object or a button to adjust the order of the rows is added to the table that represents a reference.
+com.top_logic.model.annotate.ui.TLRowObject.sortable.tooltip = Whether a button to adjust the order of the rows is added to the table.
+com.top_logic.model.annotate.ui.TLRowObject.tooltip = <i>Attribute annotation</i> that determines whether an add button to create new objects, a remove button to delete object, a copy button to copy selected object or a button to adjust the order of the rows is added to the table that represents a reference.
 com.top_logic.model.annotate.ui.TLSortColumns = Sort columns
 com.top_logic.model.annotate.ui.TLSortColumns.tooltip = Sets the sort order of tables representing objects of the annotated type.
 com.top_logic.model.annotate.util.AttributeSettings = Attribute settings
