Ticket #28951: Allow to configure context menu provider in tree tables.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -2526,25 +2526,25 @@ com.top_logic.layout.basic.contextmenu.component.config.WithContextMenu.contextM
 com.top_logic.layout.basic.contextmenu.component.config.WithContextMenuFactory.contextMenuFactory = Kontextmenü Fabrik
 com.top_logic.layout.basic.contextmenu.component.config.WithContextMenuFactory.contextMenuFactory.tooltip = <i>Kontextmenü-Fabrik</i>, die den <i>Kontextmenü-Anbieter</i> für die konfigurierte Komponente erstellt.
 com.top_logic.layout.basic.contextmenu.component.config.WithPlainContextMenuFactory = Mit einfachem Kontextmenü Fabrik
-com.top_logic.layout.basic.contextmenu.component.config.WithPlainContextMenuFactory.tooltip = <i>Mit Kontextmenü Fabrik</i>, die standardmäßig das <i>einfache Komponenten-Kontextmenü Fabrik</i> verwendet.
-com.top_logic.layout.basic.contextmenu.component.factory.ComponentContextMenuFactory = Komponenten-Kontextmenü-Fabrik
+com.top_logic.layout.basic.contextmenu.component.config.WithPlainContextMenuFactory.tooltip = <i>Mit dem Kontextmenü factory</i>, das standardmäßig <i>keine Standardbefehle</i> verwendet.
+com.top_logic.layout.basic.contextmenu.component.factory.ComponentContextMenuFactory = Komponenten-Befehle
 com.top_logic.layout.basic.contextmenu.component.factory.ComponentContextMenuFactory.tooltip = <i>Kontextmenüanbieter</i>, der Kontextmenüs aus Komponentenbefehlen erstellt.
-com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory = Fabrik für das Kontextmenü einer einfachen Komponente
-com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory.tooltip = <i>Komponentenkontextmenü-Fabrik</i>, die das aktuelle Komponentenmodell nicht berücksichtigt.
-com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory = Wählbares Kontextmenü Fabrik
-com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory.tooltip = <i>Komponenten-Kontextmenü-Fabrik</i>, die auch Befehle von Slave-Komponenten zu Kontextmenü-Einträgen hinzufügt.
-com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory = Baum-Kontextmenü Fabrik
-com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory.tooltip = <i>Wählbare Kontextmenüfabrik</i>, die ihre Kontextelement-Baumknoten vor der Verarbeitung auf ihre Business-Objekte abbildet.
+com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory = Keine Standardbefehle
+com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory.tooltip = <i>Komponentenbefehle</i>, die das aktuelle Komponentenmodell nicht berücksichtigen.
+com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory = Befehle zur Auswahl
+com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory.tooltip = <i>Komponentenbefehle</i>, die auch Befehle von untergeordneten Komponenten zu Kontextmenüeinträgen hinzufügen.
+com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory = Befehle des Baumkontextmenüs
+com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory.tooltip = <i>Befehle für die Selektion</i>, die ihre Kontextelement-Baumknoten vor der Verarbeitung auf ihre Geschäftsobjekte abbilden.
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory = Typbasierte Kontextmenü-Fabrik
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.customCommands = Benutzerdefinierte Befehle
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.customCommands.tooltip = Dem Kontextmenü hinzugefügte Befehle.
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.titleProvider = Titel-Anbieter
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.titleProvider.tooltip = <i>Etikettenanbieter</i>, der das Kontextobjekt in der Titelleiste des Menüs anzeigt.
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.tooltip = <i>Kontextmenü-Anbieter</i>, der benutzerdefinierte <i>Befehle</i> verwendet, um ein Kontextmenü im Kontext einer Komponente zu erstellen. <p> Standardmäßig werden die benutzerdefinierten Befehle in Abhängigkeit vom Typ des Kontextobjekts mit Hilfe des <i>Anbieters von Meta-Kontextmenübefehlen</i> ausgewählt. </p>
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider = Anbieter von Komponenten-Kontextmenüs
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider.tooltip = <i>Typbasierter Kontextmenü-Anbieter</i>, der die <i>Komponenten-Kontextmenü-Fabrik</i> zur Erstellung des Kontextmenüs verwendet.
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider = Wählbarer Kontextmenü-Anbieter
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider.tooltip = <i>Komponentenkontextmenü-Anbieter</i>, der zur Erstellung des Kontextmenüs <i>eine wählbare Kontextmenü-Fabrik</i> verwendet.
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider = Kontextmenü der Komponente
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider.tooltip = <i>Typbasierte Berechnung des Kontextmenüs</i> unter Verwendung von <i>Komponentenbefehlen</i> zur Erstellung des Kontextmenüs.
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider = Kontextmenü der auswählbaren Komponente
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider.tooltip = <i>Kontextmenü der Komponente</i> mit <i>Befehlen bei der Auswahl</i>, um das Kontextmenü zu erstellen.
 com.top_logic.layout.basic.contextmenu.component.factory.adapter.TypeBasedContextMenuProvider = Typbasierter Kontextmenü-Anbieter
 com.top_logic.layout.basic.contextmenu.component.factory.adapter.TypeBasedContextMenuProvider.tooltip = <i>Kontextmenü-Anbieter</i>, der von einer konfigurierten <i>Kontextmenü-Fabrik</i> unter Verwendung der aus dem Konfigurationskontext entnommenen <i>Komponente</i> implementiert wird. <p> Standardmäßig wird die <i>typbasierte Kontextmenüfabrik</i> verwendet, die Kontextmenübefehle auf der Grundlage des Typs des Kontextobjekts auswählt. </p>
 com.top_logic.layout.basic.contextmenu.config.ConfiguredContextMenuCommandsProvider = Anbieter konfigurierter Kontextmenü-Befehle
@@ -3300,7 +3300,7 @@ com.top_logic.layout.form.component.SelectorComponent.UIOptions.defaultSelection
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder = Optionen
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder.tooltip = <i>List Model Builder</i>, der die Optionen erstellt, aus denen ausgewählt werden kann. <p> Die ausgewählte Option wird sofort auf dem Auswahlkanal dieser Komponente veröffentlicht. </p>
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider = Optionsbeschriftung
-com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Label-Anbieter</i> für die Anzeige der Optionen. <p> Wenn keine angegeben wird, wird der <i>Meta-Label-Anbieter</i> verwendet.</p>
+com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Berechnung der Bezeichnung</i> für die Anzeige der Optionen. <p> Wenn keine angegeben wird, wird <i>die Anwendungskonfiguration</i> verwendet. </p>
 com.top_logic.layout.form.component.SelectorComponent.tooltip = <i>Komponente</i>, die ein einzelnes Auswahlfeld mit Optionen anzeigt, die von einem <i>List Model Builder</i> erzeugt wurden.
 com.top_logic.layout.form.component.SimpleFormComponent = Einfache Formular-Komponente
 com.top_logic.layout.form.component.SimpleFormComponent.tooltip = Die <i>einfache Formular-Komponente</i> kann mit einfachen JSP- und HTML-Seiten verwendet werden.
@@ -4135,6 +4135,8 @@ com.top_logic.layout.provider.LabelResourceProvider = Anbieter von Label-Ressour
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider = Label-Generator
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider.tooltip = Der <i>Etikettenlieferant</i> zum Verpacken.
 com.top_logic.layout.provider.LabelResourceProvider.tooltip = Dynamische Erweiterung eines <i>Label-Providers</i> zu einem <i>Ressourcen-Provider</i>, um einen <i>Label-Provider</i> in einem Kontext zu verwenden, in dem ein <i>Ressourcen-Provider</i> erforderlich ist.
+com.top_logic.layout.provider.MetaLabelProvider = Nachschlagen der Anwendungskonfiguration
+com.top_logic.layout.provider.MetaLabelProvider.tooltip = Berechnet Bezeichnungen für Objekte anhand von Implementierungen, die in der Anwendungskonfiguration für Objekttypen registriert sind. <p> Verwendet den <i>Dienst für die Berechnung von Bezeichnungen</i>, um die Implementierung des <i>Bezeichnungsanbieters</i> zu finden. Als Schlüssel zum Register verwendet es entweder den dynamischen Typ oder die Java-Klasse des Objekts, um eine geeignete Implementierung zu finden. </p>
 com.top_logic.layout.provider.label.FileSizeLabelProvider = Anbieter von Dateigrößenetiketten
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits = Maximale Nachkommastellen
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits.tooltip = Maximale Anzahl der angezeigten Nachkommastellen.
@@ -5966,7 +5968,7 @@ com.top_logic.layout.table.model.ColumnBaseConfig.fieldProvider.tooltip = <i>Fel
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider = Anbieter von Filtern
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider.tooltip = <i>Tabellenfilter-Anbieter</i>, um <i>einen Tabellenfilter</i> für diese Spalte bereitzustellen, oder <code>null</code>, wenn keiner konfiguriert ist.
 com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider = Volltext-Anbieter
-com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Labelanbieter</i>, um den Spaltenwert für die Volltextsuche bereitzustellen. <p> Wenn nicht konfiguriert, wird standardmäßig entweder <i>Label-Anbieter</i> oder <i>Ressourcen-Anbieter</i> verwendet, wenn eine dieser Eigenschaften eingestellt ist. </p> <p> Wenn weder <i>Label-Anbieter</i> noch <i>Ressourcen-Anbieter</i> eingestellt ist, die Spalte aber einen <i>Accessor</i> hat, ist der Standardwert für den Volltext-Anbieter der <i>Meta-Label-Anbieter</i>. </p>
+com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Berechnung der Bezeichnung</i>, die den Spaltenwert für die Volltextsuche liefert. <p> Wenn nicht konfiguriert, wird standardmäßig entweder der <i>Anbieter von Bezeichnungen</i> oder der <i>Anbieter von Ressourcen</i> verwendet, wenn eine dieser Eigenschaften festgelegt ist. </p> <p> Wenn weder der <i>Label-Provider</i> noch der <i>Resource-Provider</i> eingestellt ist, die Spalte aber einen <i>Accessor</i> hat, ist der Standard für den Volltext-Provider die <i>Suche in der Anwendungskonfiguration</i>. </p>
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider = Anbieter der Kopfsteuerung
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider.tooltip = Der <i>Steuerelementanbieter</i>, der das Steuerelement erzeugt, das den Kopf der Spalte darstellt, oder <code>null</code>, wenn kein Steuerelement konfiguriert ist.
 com.top_logic.layout.table.model.ColumnBaseConfig.headStyle = Kopf-Stil
@@ -6295,10 +6297,12 @@ com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = {foreac
 com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name.tooltip = <i>Modellname</i> für die <i>Bezeichnung des Knotens der Komponente der Baumtabelle</i>.
 com.top_logic.layout.table.tree.TreeTableConfig = Konfiguration der Baumtabelle
 com.top_logic.layout.table.tree.TreeTableConfig.tooltip = <i>Konfiguration der Formulartabelle</i> durch Auswahl des <i>Baumtabellen-Kontextmenüanbieters</i> als Standard.
-com.top_logic.layout.table.tree.TreeTableContextMenuFactory = Baumtabelle Kontextmenü Fabrik
-com.top_logic.layout.table.tree.TreeTableContextMenuFactory.tooltip = <i>Wählbare Kontextmenü-Fabrikzuordnung</i> von Knotenobjekten zu ihren jeweiligen Geschäftsobjekten.
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory = Befehle im Kontextmenü der Baumtabelle
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory.Config.command-ids = Befehl-IDs
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory.Config.command-ids.tooltip = IDs von Befehlen, die im Kontextmenü der Baumtabelle angezeigt werden sollen. <p> Die Befehle müssen in der Anwendungskonfiguration in der <i>Command Handler Factory</i> des Dienstes registriert werden. </p>
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory.tooltip = <i>Selektionsbefehle</i> zur Abbildung von Knotenobjekten auf ihre jeweiligen Geschäftsobjekte.
 com.top_logic.layout.table.tree.TreeTableContextMenuProvider = Anbieter des Kontextmenüs der Baumtabelle
-com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Wählbarer Kontextmenü-Anbieter</i>, der das <i>Baumtabellen-Kontextmenü werkseitig</i> auswählt.
+com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Das Kontextmenü der auswählbaren Komponente</i> wählt standardmäßig <i>Befehle aus dem Kontextmenü der Baumtabelle</i>.
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll = Baumtabelle aufklappen alle einklappen
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll.tooltip = Erweitert alle Knoten in der <i>Baumtabellenkomponente</i>.
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component = Komponente
