Ticket #28951: Allow to configure context menu provider in tree tables.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -2528,25 +2528,25 @@ com.top_logic.layout.basic.contextmenu.component.config.WithContextMenu.contextM
 com.top_logic.layout.basic.contextmenu.component.config.WithContextMenuFactory.contextMenuFactory = Context menu factory
 com.top_logic.layout.basic.contextmenu.component.config.WithContextMenuFactory.contextMenuFactory.tooltip = <i>Context menu factory</i> creating the <i>context menu provider</i> for the configured component.
 com.top_logic.layout.basic.contextmenu.component.config.WithPlainContextMenuFactory = With plain context menu factory
-com.top_logic.layout.basic.contextmenu.component.config.WithPlainContextMenuFactory.tooltip = <i>With context menu factory</i> that uses <i>plain component context menu factory</i> by default.
-com.top_logic.layout.basic.contextmenu.component.factory.ComponentContextMenuFactory = Component context menu factory
+com.top_logic.layout.basic.contextmenu.component.config.WithPlainContextMenuFactory.tooltip = <i>With context menu factory</i> that uses <i>no default commands</i> by default.
+com.top_logic.layout.basic.contextmenu.component.factory.ComponentContextMenuFactory = Component commands
 com.top_logic.layout.basic.contextmenu.component.factory.ComponentContextMenuFactory.tooltip = <i>Context menu provider</i> that creates context menus from component commands.
-com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory = Plain component context menu factory
-com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory.tooltip = <i>Component context menu factory</i> that does not consider the current component model.
-com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory = Selectable context menu factory
-com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory.tooltip = <i>Component context menu factory</i> that also adds commands of slave components to context menu entries.
-com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory = Tree context menu factory
-com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory.tooltip = <i>Selectable context menu factory</i> that maps its context element tree nodes to their business objects before processing.
+com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory = No default commands
+com.top_logic.layout.basic.contextmenu.component.factory.PlainComponentContextMenuFactory.tooltip = <i>Component commands</i> that does not consider the current component model.
+com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory = Commands on selection
+com.top_logic.layout.basic.contextmenu.component.factory.SelectableContextMenuFactory.tooltip = <i>Component commands</i> that also adds commands of slave components to context menu entries.
+com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory = Tree context menu commands
+com.top_logic.layout.basic.contextmenu.component.factory.TreeContextMenuFactory.tooltip = <i>Commands on selection</i> that maps its context element tree nodes to their business objects before processing.
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory = Type based context menu factory
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.customCommands = Custom commands
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.customCommands.tooltip = Commands added to the context menu.
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.titleProvider = Title provider
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.Config.titleProvider.tooltip = <i>Label provider</i> that displays the context object in the menu's title bar.
 com.top_logic.layout.basic.contextmenu.component.factory.TypeBasedContextMenuFactory.tooltip = <i>Context menu provider</i> that uses custom <i>commands</i> to build a context menu in the context of a component. <p> By default, the custom commands are selected depending on the type of the context object using the <i>meta context menu commands provider</i>. </p>
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider = Component context menu provider
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider.tooltip = <i>Type based context menu provider</i> using <i>component context menu factory</i> for creating the context menu.
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider = Selectable context menu provider
-com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider.tooltip = <i>Component context menu provider</i> using <i>selectable context menu factory</i> to create the context menu.
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider = Context menu of component
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.ComponentContextMenuProvider.tooltip = <i>Type based context menu provider</i> using <i>component commands</i> for creating the context menu.
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider = Context menu of selectable component
+com.top_logic.layout.basic.contextmenu.component.factory.adapter.SelectableContextMenuProvider.tooltip = <i>Context menu of component</i> using <i>commands on selection</i> to create the context menu.
 com.top_logic.layout.basic.contextmenu.component.factory.adapter.TypeBasedContextMenuProvider = Type based context menu provider
 com.top_logic.layout.basic.contextmenu.component.factory.adapter.TypeBasedContextMenuProvider.tooltip = <i>Context menu provider</i> implemented by a configured <i>context menu factory</i> using the <i>component</i> taken from the configuration context. <p> By default, the <i>type based context menu factory</i> is used that selects context menu commands based on the type of the context object. </p>
 com.top_logic.layout.basic.contextmenu.config.ConfiguredContextMenuCommandsProvider = Configured context menu commands provider
@@ -3308,7 +3308,7 @@ com.top_logic.layout.form.component.SelectorComponent.UIOptions.defaultSelection
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder = Option builder
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionBuilder.tooltip = <i>List model builder</i> creating the options to select from. <p> The selected option is immediately published on the selection channel of this component. </p>
 com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider = Option label provider
-com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Label provider</i> for displaying the options. <p> If none is given, <i>meta label provider</i> is used. </p>
+com.top_logic.layout.form.component.SelectorComponent.UIOptions.optionLabelProvider.tooltip = <i>Label provider</i> for displaying the options. <p> If none is given, <i>application configuration lookup</i> is used. </p>
 com.top_logic.layout.form.component.SelectorComponent.tooltip = <i>Component</i> displaying a single select field showing options produced by a <i>list model builder</i>.
 com.top_logic.layout.form.component.SimpleFormComponent = Simple form component
 com.top_logic.layout.form.component.SimpleFormComponent.tooltip = The <i>simple form component</i> can be used with simple JSP and HTML pages.
@@ -4143,6 +4143,8 @@ com.top_logic.layout.provider.LabelResourceProvider = Label resource provider
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider = Label provider
 com.top_logic.layout.provider.LabelResourceProvider.Config.label-provider.tooltip = The <i>label provider</i> to wrap.
 com.top_logic.layout.provider.LabelResourceProvider.tooltip = Dynamic extension of a <i>label provider</i> to a <i>resource provider</i> to use a <i>label provider</i> in a context where a <i>resource provider</i> is required.
+com.top_logic.layout.provider.MetaLabelProvider = Application configuration lookup
+com.top_logic.layout.provider.MetaLabelProvider.tooltip = Computes labels for objects using implementations registered in the application configuration for object types. <p> Uses <i>label provider service</i> for looking up its <i>label provider</i> implementation. As key to the registry, it either uses the dynamic type or the Java class of the object to find an appropriate implementation. </p>
 com.top_logic.layout.provider.label.FileSizeLabelProvider = File size label provider
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits = Maximum fraction digits
 com.top_logic.layout.provider.label.FileSizeLabelProvider.Config.max-fraction-digits.tooltip = Maximum amount of displayed fraction digits.
@@ -5974,7 +5976,7 @@ com.top_logic.layout.table.model.ColumnBaseConfig.fieldProvider.tooltip = <i>Fie
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider = Filter provider
 com.top_logic.layout.table.model.ColumnBaseConfig.filterProvider.tooltip = <i>Table filter provider</i> to provide <i>table filter</i> for this column, or <code>null</code> if none configured.
 com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider = Full text provider
-com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Label provider</i> to provide the column value for full-text search. <p> If not configured, it defaults to either <i>Label provider</i>, or <i>Resource provider</i>, if one of those properties are set. </p> <p> If neither <i>Label provider</i> nor <i>Resource provider</i> is set, but the column has an <i>Accessor</i>, the default for the full-text provider is <i>meta label provider</i>. </p>
+com.top_logic.layout.table.model.ColumnBaseConfig.fullTextProvider.tooltip = <i>Label provider</i> to provide the column value for full-text search. <p> If not configured, it defaults to either <i>Label provider</i>, or <i>Resource provider</i>, if one of those properties are set. </p> <p> If neither <i>Label provider</i> nor <i>Resource provider</i> is set, but the column has an <i>Accessor</i>, the default for the full-text provider is <i>application configuration lookup</i>. </p>
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider = Head control provider
 com.top_logic.layout.table.model.ColumnBaseConfig.headControlProvider.tooltip = The <i>control provider</i> to produce the control rendering the head of the column, or <code>null</code> when none configured.
 com.top_logic.layout.table.model.ColumnBaseConfig.headStyle = Head style
@@ -6303,10 +6305,12 @@ com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name = {foreac
 com.top_logic.layout.table.tree.TreeTableComponentNodeLabelNaming$Name.tooltip = <i>Model name</i> for the <i>tree table component node label naming</i>.
 com.top_logic.layout.table.tree.TreeTableConfig = Tree table configuration
 com.top_logic.layout.table.tree.TreeTableConfig.tooltip = <i>Form table configuration</i> choosing <i>tree table context menu provider</i> by default.
-com.top_logic.layout.table.tree.TreeTableContextMenuFactory = Tree table context menu factory
-com.top_logic.layout.table.tree.TreeTableContextMenuFactory.tooltip = <i>Selectable context menu factory</i> mapping node objects to their respective business objects.
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory = Tree-table context menu commands
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory.Config.command-ids = Command ids
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory.Config.command-ids.tooltip = IDs of commands that should be displayed in the context menu of the tree table. <p> The commands must be registered in the application configuration at the service <i>command handler factory</i>. </p>
+com.top_logic.layout.table.tree.TreeTableContextMenuFactory.tooltip = <i>Commands on selection</i> mapping node objects to their respective business objects.
 com.top_logic.layout.table.tree.TreeTableContextMenuProvider = Tree table context menu provider
-com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Selectable context menu provider</i> choosing <i>tree table context menu factory</i> by default.
+com.top_logic.layout.table.tree.TreeTableContextMenuProvider.tooltip = <i>Context menu of selectable component</i> choosing <i>tree-table context menu commands</i> by default.
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll = Tree table expand collapse all
 com.top_logic.layout.table.tree.TreeTableExpandCollapseAll.tooltip = Expands all nodes in the <i>tree table component</i>.
 com.top_logic.layout.table.tree.TreeTableNodeLabelNaming.Name.component = Component
