Ticket #28951: Allow to specify filter functions for subtree select.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6274,6 +6274,10 @@ com.top_logic.layout.table.renderer.UniformCellRenderer.tooltip = Eine <i>Zell-R
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll = Baumtabelle erweitern einklappen alle
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll.tooltip = Abstrakter Befehl, der alle Knoten in einer Baumtabelle ein- oder ausklappt.
 com.top_logic.layout.table.tree.SelectSubtree = Teilbaum auswählen
+com.top_logic.layout.table.tree.SelectSubtree.Config.filter = Filter
+com.top_logic.layout.table.tree.SelectSubtree.Config.filter.tooltip = Eine optionale Filterfunktion, die vor der Auswahl von Elementen angewendet wird. <p> Es werden nur die Elemente ausgewählt, die von der angegebenen Filterfunktion akzeptiert werden. </p> <p> Die Filterfunktion erhält als erstes Argument das auszuwählende Element und als zweites Argument das Modell der Komponente: </p> <pre> <code>element -> model -> true</code> </pre>
+com.top_logic.layout.table.tree.SelectSubtree.Config.level-filter = Ebenen-Filter
+com.top_logic.layout.table.tree.SelectSubtree.Config.level-filter.tooltip = Eine optionale Filterfunktion, die entscheidet, ob ein Knoten als Ebene gezählt wird. <p> Ein Element, das vom Ebenenfilter nicht akzeptiert wird, zählt nicht als eigene Ebene. Im Teilbaum dieser Elemente wird eine zusätzliche Ebene von Elementen ausgewählt. Nur relevant, wenn eine Ebenenbegrenzung angegeben ist. </p> <p> Die Filterfunktion erhält als erstes Argument das Element und als zweites Argument das Modell der Komponente: </p> <pre> <code>element -> model -> true</code> </pre>
 com.top_logic.layout.table.tree.SelectSubtree.Config.levels = Ebenen
 com.top_logic.layout.table.tree.SelectSubtree.Config.levels.tooltip = Die Anzahl der zu verarbeitenden Baumebenen. <p> Ein Wert von <code>0</code> bedeutet "alle Ebenen". </p>
 com.top_logic.layout.table.tree.SelectSubtree.Config.select = Wählen Sie
