--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6274,6 +6274,10 @@ com.top_logic.layout.table.renderer.UniformCellRenderer.tooltip = A <i>cell rend
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll = Tree table expand collapse all
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll.tooltip = Abstract command that expands or collapses all nodes in a tree table.
 com.top_logic.layout.table.tree.SelectSubtree = Select subtree
+com.top_logic.layout.table.tree.SelectSubtree.Config.filter = Filter
+com.top_logic.layout.table.tree.SelectSubtree.Config.filter.tooltip = An optional filter function to apply before selecting elements. <p> The selection of only those elements is chanced that are accepted by the specified filter function. </p> <p> The filter function receives the element to select as first argument and the component's model as second argument: </p> <pre> <code>element -> model -> true</code> </pre>
+com.top_logic.layout.table.tree.SelectSubtree.Config.level-filter = Level filter
+com.top_logic.layout.table.tree.SelectSubtree.Config.level-filter.tooltip = An optional filter function that decides whether a node is counted as level. <p> An element not accepted by the level filter does not count as separate level. In the subtree of those elements one additional level of elements is selected. Only relevant, if a level limit is given. </p> <p> The filter function receives the element as first argument and the component's model as second argument: </p> <pre> <code>element -> model -> true</code> </pre>
 com.top_logic.layout.table.tree.SelectSubtree.Config.levels = Levels
 com.top_logic.layout.table.tree.SelectSubtree.Config.levels.tooltip = The number of tree levels to process. <p> A value of <code>0</code> means "all levels". </p>
 com.top_logic.layout.table.tree.SelectSubtree.Config.select = Select
